--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-/node_modules
+# dependencies
+node_modules/
+
+# environment variables / secrets
+.env
+
+# file uploads or other runtime artefacts
+uploads/
+
+# optional: build output, logs, coverage
+dist/
+coverage/
+*.log
