--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "googleapis": "^150.0.1",
     "mime-types": "^3.0.1",
