update excel data to db

--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "express": "^5.1.0",
     "googleapis": "^150.0.1",
     "mime-types": "^3.0.1",
-    "multer": "^2.0.0",
+    "multer": "^2.0.2",
     "pg": "^8.16.0",
-    "pg-cursor": "^2.15.3"
+    "pg-cursor": "^2.15.3",
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
