feat: Add email security alerts and mobile number masking
Security Features:
- Add email notification system for admin logins
- Implement POST /api/auth/notify-login endpoint for UI integration
- Send detailed security alerts with IP, timestamp, and user agent info
- Support Gmail, SendGrid, AWS SES, and other SMTP providers

Mobile Number Privacy:
- Mask mobile numbers for public/non-admin users (show last 4 digits)
- Full mobile numbers visible to authenticated admin users
- Add optionalAuth middleware to detect admin status on public routes

Email Configuration:
- Add nodemailer dependency for email sending
- Configure SMTP settings via environment variables
- Add comprehensive setup guides and UI integration examples
- Include test scripts for verification

Documentation:
- EMAIL_SECURITY_SETUP.md: Complete SMTP setup guide
- UI_LOGIN_NOTIFICATION_GUIDE.md: Frontend integration examples
- Update .env.example with email configuration

Testing:
- Add test-login-notification.js for end-to-end testing
- Verify mobile masking works correctly for admin vs public users

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,13 @@ GOOGLE_DRIVE_FOLDER_ID=your-google-drive-folder-id
 # CORS Configuration (handled in app.js)
 # Development origins: http://localhost:5000, http://127.0.0.1:5000
 # Production origins: https://nikhilaodishapandarasamaja.in, https://www.nikhilaodishapandarasamaja.in
+
+# Email Configuration (for security alerts)
+# SMTP settings for sending login alerts
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+# Email addresses for alerts
+ALERT_EMAIL_TO=admin@nikhilaodishapandarasamaja.in
+ALERT_EMAIL_FROM=noreply@nikhilaodishapandarasamaja.in
