--- a/.env.example
+++ b/.env.example
@@ -20,8 +20,10 @@ GOOGLE_DRIVE_FOLDER_ID=your-google-drive-folder-id
 
 # Email Configuration (for security alerts)
 # SMTP settings for sending login alerts
+# Note: Use port 465 for SSL (recommended for Render/production)
+#       Use port 587 for TLS (works for local development)
 SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
+SMTP_PORT=465
 SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-app-password
 # Email addresses for alerts
